# quireforge

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
apps/desktop/src-tauri/: Cargo.toml  desktop-template.desktop  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/metainfo/: io.github.codeframe78.QuireForge.metainfo.xml
apps/desktop/src-tauri/src/: contract.rs  desktop.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/attachment/: mod.rs  types.rs
apps/desktop/src-tauri/src/codex/: app_server.rs  backend.rs  error.rs  integration.rs  integration_mutation.rs  integration_service.rs  mock.rs  mod.rs  model_selection.rs  probe.rs  types.rs  usage.rs
apps/desktop/src-tauri/src/codex/auth/: mod.rs  types.rs
apps/desktop/src-tauri/src/codex/conversation/: lifecycle.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/git/: mod.rs  mutation.rs  types.rs
apps/desktop/src-tauri/src/preview/: mod.rs  types.rs
apps/desktop/src-tauri/src/project/: identity.rs  mod.rs  storage.rs  types.rs
apps/desktop/src-tauri/src/terminal/: mod.rs  types.rs
apps/desktop/src-tauri/src/worktree/: mod.rs  types.rs
docs/: A2-HOSTING-CAPABILITY-AUDIT.md  ARCHITECTURE.md  BETA-INSTALLATION.md  BUILDING.md  CLOUDFLARE-PAGES-CAPABILITY-AUDIT.md  CLOUDFLARE-PAGES-DEPLOYMENT.md  CODEX-INTEGRATION.md  COMPATIBILITY.md  CPANEL-DEPLOYMENT.md  FEATURE-PARITY.md  GITHUB-PAGES.md  LOCAL-BUILD-PERFORMANCE.md  MILESTONE-FORECASTS.md  MILESTONE_16A_WEBSITE_RECONCILIATION.md  MILESTONE_16B_ORIGIN_STAGING.md  MILESTONE_19_HARDENING.md  (+15 more)
(+240 files in other folders)
