[package]
name = "quireforge"
version = "0.0.0"
description = "An unofficial native Linux workspace for Codex"
authors = ["QuireForge contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/codeframe78/quireforge"
rust-version = "1.88"

[lib]
name = "quireforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22.1"
libc = "0.2"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rusqlite = { version = "0.40.0", features = ["bundled"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = ["io-util", "macros", "process", "sync", "time"] }
url = "2.5.8"
uuid = { version = "1.24.0", features = ["v7"] }
